[workspace]
resolver = "2"
members = [
    "sk-api",
    "sk-cli",
    "sk-core",
    "sk-ctrl",
    "sk-driver", "sk-gen",
    "sk-store",
    "sk-tracer",
]

[workspace.package]
version = "2.0.0"
authors = ["Applied Computing Research Labs"]
documentation = "https://appliedcomputing.io/simkube/"
license-file = "LICENSE"
readme = "README.md"
edition = "2021"
rust-version = "1.79"

[profile.dev.package."*"]
debug = false

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[workspace.dependencies]
sk-api = { version = "2.0.0", path = "sk-api" }
sk-core = { version = "2.0.0", path = "sk-core" }
sk-store = { version = "2.0.0", path = "sk-store" }

anyhow = { version = "1.0.93", features = ["backtrace"] }
async-recursion = "1.1.1"
async-trait = "0.1.83"
bytes = "1.8.0"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["cargo", "derive", "string"] }
clap_complete = "4.5.38"
clockabilly = "0.1.1"
derive_setters = "0.1.6"
dirs = "5.0.1"
either = "1.13.0"
futures = "0.3.31"
json-patch-ext = "0.1.1"
k8s-openapi = { version = "0.23.0", features = ["v1_31"] }
lazy_static = "1.5.0"
object_store = { version = "0.11.1", features = ["aws", "gcp", "azure", "http"] }
parse_datetime_fork = "0.6.0-custom"
paste = "1.0.15"
ratatui = "0.28.1"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1.3.0"
rocket = { version = "0.5.1", features = ["json", "tls"] }
schemars = { version = "0.8.21", features = ["chrono"] }
serde = "1.0.215"
serde_json = "1.0.132"
serde_yaml = "0.9.34"
thiserror = "1.0.69"
tokio = { version = "1.41.1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.3"
rand = "0.8"
rand_distr = "0.4.3"

# test dependencies
assertables = "8.18.0"
http = "1.1.0"
httpmock = "0.6.8"
hyper = "1.5.0"
insta = "1.41.1"
mockall = "0.11.4"
rstest = "0.18.2"
tracing-test = "0.2.5"

# kube_core = "0.97.0"

[workspace.dependencies.kube]
version = "0.97.0"
features = ["client", "derive", "runtime", "rustls-tls", "admission", "unstable-runtime"]
default-features = false


