[workspace]
resolver = "2"
members = [
    "sk-api",
    "sk-cli",
    "sk-core",
    "sk-ctrl",
    "sk-driver",
    "sk-store",
    "sk-tracer",

    "testutils",
]

[workspace.package]
version = "2.4.4"
authors = ["Applied Computing Research Labs"]
documentation = "https://simkube.dev/documentation/"
license-file = "LICENSE"
readme = "README.md"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
sk-api = { version = "2.4.4", path = "sk-api" }
sk-core = { version = "2.4.4", path = "sk-core" }
sk-store = { version = "2.4.4", path = "sk-store" }

anyhow = { version = "1.0.98", features = ["backtrace"] }
assertables = "9.8.0"
async-recursion = "1.1.1"
async-trait = "0.1.88"
bytes = "1.11.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["cargo", "derive", "string"] }
clap_complete = "4.5.54"
clockabilly = "0.2.2"
const_format = "0.2.34"
derive_setters = "0.1.7"
dirs = "6.0.0"
either = "1.15.0"
futures = "0.3.31"
json-patch-ext = "0.3.2"
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
lazy_static = "1.5.0"
object_store = { version = "0.12.2", features = ["aws", "gcp", "azure", "http"] }
parse_datetime = "0.9.0"  # v0.10.0 has broken parsing, so we can't update to that right now
paste = "1.0.15"
pest = "2.8.5"
pest_derive = "2.8.5"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1.3.0"
rocket = { version = "0.5.1", features = ["json", "tls"] }
# tied to kube-rs schemars version
schemars = { version = "0.8.22", features = ["chrono"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.4"

# test dependencies
sk-testutils = { path = "testutils" }

assert_fs = "1.1.3"
http = "1.3.1"
httpmock = "0.8.0-alpha.1"
hyper = "1.6.0"
insta = "1.43.1"
mockall = "0.13.1"
rstest = "0.25.0"
rstest-log = "0.2.0"
test-log = { version = "0.2.18", features = ["trace"] }
tracing-test = "0.2.5"

[workspace.dependencies.kube]
version = "1.1.0"
features = ["client", "derive", "runtime", "rustls-tls", "admission", "unstable-runtime"]
default-features = false

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage,coverage_nightly)'] }
