[tool.poetry]
authors = ["David Morrison <drmorr@appliedcomputing.io>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cdk8s = "^2"
fireconfig = { git = "https://github.com/acrlabs/fireconfig", tag = "v0.5.3" }

[tool.poetry.group.dev.dependencies]
mypy = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
