[package]
name = "sk-api"
description = "SimKube API definitions"
version.workspace = true
authors.workspace = true
documentation.workspace = true
license-file.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
clockabilly.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
