[package]
name = "skctl"
description = "CLI utility for SimKube"
version.workspace = true
authors.workspace = true
documentation.workspace = true
license-file.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
assertables = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clockabilly = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
const_format = { workspace = true }
derive_setters = { workspace = true }
dirs = { workspace = true }
json-patch-ext = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
lazy_static = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sk-api = { workspace = true }
sk-core = { workspace = true }
sk-store = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
rstest-log = { workspace = true }
sk-testutils = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
