[package]
name = "skctl"
description = "CLI utility for SimKube"
version.workspace = true
authors.workspace = true
documentation.workspace = true
license-file.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
assertables = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clockabilly = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
const_format = { workspace = true }
dirs = { workspace = true }
humantime = { workspace = true }
json-patch-ext = { workspace = true }
k8s-openapi = { workspace = true }
kdam = { workspace = true }
kube = { workspace = true }
metrics = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sk-api = { workspace = true }
sk-core = { workspace = true }
sk-store = { workspace = true }
sk-skel = { workspace = true }
tokio = { workspace = true }
blackbox-metrics = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
insta = { workspace = true }
rstest = { workspace = true }
rstest-log = { workspace = true }
sk-testutils = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
