[package]
name = "sk-core"
description = "SimKube core libraries"
version.workspace = true
authors.workspace = true
documentation.workspace = true
license-file.workspace = true
readme.workspace = true
edition.workspace = true

[features]
mock = []

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
clockabilly = { workspace = true }
either = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
lazy_static = { workspace = true }
object_store = { workspace = true }
parse_datetime = { workspace = true }
paste = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sk-api = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

# mock dependencies
mockall = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
assertables = { workspace = true }
clockabilly = { workspace = true, features = ["mock"] }
httpmock = { workspace = true }
rstest = { workspace = true }
rstest-log = { workspace = true }
sk-testutils = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
