[package]
name = "sk-driver"
description = "SimKube simulation runner job"
version.workspace = true
authors.workspace = true
documentation.workspace = true
license-file.workspace = true
readme.workspace = true
edition.workspace = true

[features]
testutils = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clockabilly = { workspace = true }
either = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
json-patch = { workspace = true }
json-patch-ext = { workspace = true }
rocket = { workspace = true }
serde_json = { workspace = true }
sk-api = { workspace = true }
sk-core = { workspace = true }
sk-store = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
clockabilly = { workspace = true, features = ["mock"] }
httpmock = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
rmp-serde = { workspace = true }
sk-core = { workspace = true, features = ["testutils"] }
sk-store = { workspace = true, features = ["testutils"] }
tracing-test = { workspace = true }
