[package]
name = "sk-skel"
description = "DSL for querying and transforming SimKube traces"
version.workspace = true
authors.workspace = true
documentation.workspace = true
license-file.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
json-patch-ext = { workspace = true }
metrics = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
sk-core = { workspace = true }
sk-store = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assertables = { workspace = true }
blackbox-metrics = { workspace = true }
kube = { workspace = true }
rstest = { workspace = true }
sk-testutils = { workspace = true }

[lints]
workspace = true
