[package]
name = "sk-store"
description = "SimKube trace store library"
version.workspace = true
authors.workspace = true
documentation.workspace = true
license-file.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clockabilly = { workspace = true }
futures = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sk-api = { workspace = true }
sk-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assertables = { workspace = true }
clockabilly = { workspace = true, features = ["mock"] }
httpmock = { workspace = true }
lazy_static = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
rstest-log = { workspace = true }
sk-testutils = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
